# flask-heroku-demo

./: .gitignore  app.py  pyproject.toml
templates/: center.html  index.html
