[project]
name = "flask004"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9.6"
dependencies = [
    "flask==2.2.4",
    "gunicorn>=23.0.0",
]

[dependency-groups]
dev = []

[project.scripts]
flask004 = "app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
